# fitsobject

./: CMakeLists.txt  FitsObject.cpp  FitsObject.h  README.md  Test.cpp  test.fits
cmake/: FindUnitTest++.cmake
